# $Id: Makefile.am,v 1.2 2006/11/27 09:59:31 mloskot Exp $
#
# Author: Mateusz Loskot <mateusz@loskot.net>
#

SUBDIRS = \
	empty \
	firebird \
	mysql \
	odbc  \
	oracle \
	postgresql \
	sqlite3 \
	empty/test \
	firebird/test \
	mysql/test \
	odbc/test \
	oracle/test \
	postgresql/test \
	sqlite3/test
